# AIRA-DSP_Project

./: .gitignore
AIRA/: CMakeLists.txt  LOCALIZATION_GUI.md  SEPARATION_EVALUATION.md  SEPARATION_GUI.md  StartProjectScript.sh  StartSeparationScript.sh  SwitchSeparationSource.sh  comandoCompilar
AIRA/cpp/include/: das_localizer.h
AIRA/cpp/src/: das_localizer.c  jack_das_localizer.c  jack_das_separator.cpp  jack_in_to_out.c  localization_gui.c  separation_gui.c
Octave/Localizacion/: 2Fuentes.ofig  AIRA_DOA.m  README.md  corpus44100_clean-1source_localization_results.csv  corpus44100_clean-2source_localization_results.csv  corpus44100_noisy-1source_localization_results.csv  corpus48000_clean-1source_localization_results.csv  corpus48000_clean-2source_localization_results.csv  corpus48000_clean-3source_localization_results.csv  corpus48000_localization_results.csv  corpus48000_noisy-1source_localization_results.csv  corpus48000_noisy-2source_localization_results.csv  corpus48000_noisy-3source_localization_results.csv  corpus_localization_results.csv  gcc.m  multigcc.m  pearson_corr.m  run_corpus44100.m  run_corpus48000.m  run_localization_corpus.m  run_localization_simulation.m  run_localization_single_corpus.m  run_single_example.m  run_wola_das_adaptive_mask.m  run_wola_das_dp_corpus.m  run_wola_das_mask_ablation.m  run_wola_localization_corpus.m  sim_DOA_AIRA.m  untitled.ofig  wola_corpus48000_localization_results.csv  wola_das_adaptive_mask_results.csv  wola_das_dp_corpus48000_results.csv  wola_das_mask_ablation_results.csv
Octave/Separacion/: das_guided_beamforming_results.csv  das_guided_localization_results.csv  gsc.m  lcmv.m  mvdr.m  realtime_gui_localization.csv  run_das_guided_beamforming.m  run_das_realtime_gui.m  run_full_das_iterative_sic.m  run_full_das_separation.m  run_full_das_sic.m  run_full_das_slides_1_48.m  run_full_das_soft_mask.m  run_full_das_triple_sum.m  run_single_das_iterative_sic.m  run_single_das_sic.m  run_single_das_slides_1_48.m  run_single_das_soft_mask.m  run_single_das_triple_sum.m  run_single_full_separation.m  run_single_separation_gui.m  run_wola_source_separation.m  wola_source_separation_results.csv
Octave/Separacion/full_results/clean-2source/: localization_results.csv  separation_info.txt
Octave/Separacion/full_results/das_iterative_sic/clean-2source/: iteration_metrics.csv  localization_results.csv  run_info.txt
Octave/Separacion/full_results/das_sic/clean-2source/: localization_results.csv  separation_info.txt
Octave/Separacion/full_results/das_soft_mask/clean-2source/: localization_results.csv  separation_info.txt  separation_metrics.csv
Octave/Separacion/full_results/das_triple_sum/clean-2source/: localization_results.csv  separation_info.txt  separation_metrics.csv
Octave/Separacion/full_results/slides_1_48/clean-2source/: localization_results.csv  separation_info.txt
data/corpus44100/noisy-2source090/: info.txt
